# stripe_payment_system

./: README.md  docker-compose.yml
nginx/: nginx.conf
stripe_payment/: .env  Dockerfile  entrypoint.sh  pyproject.toml
stripe_payment/items/: models.py  urls.py  views.py
stripe_payment/stripe_payment/: asgi.py  config.py  settings.py  wsgi.py
stripe_payment/templates/: item_detail.html  item_list.html
