[tool.poetry]
name = "stripe-payment-system"
version = "0.1.0"
description = ""
authors = ["Ilmir <you@Ãvalitovilmir29@gmail.com>"]
readme = "README.md"
packages = [{include = "stripe_payment_system"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
load-dotenv = "^0.1.0"
djangorestframework = "^3.14.0"
stripe = "^5.0.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
